# datacentres_water

./: README.md  datacenter_map_data.csv  datacentres_water_v2.py  extract_map_disasters_v1.py  govt_digital_infrastructure_v3.py  pyproject.toml
superseded/: datacentres_water_v1.py  govt_digital_infrastructure_v1.py  govt_digital_infrastructure_v2.py
